마이페이지, 페이지들 수정

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -147,16 +147,16 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Menu
+          Our Product
         </h2>
       </div>
 
       <ul class="filters_menu">
         <li class="active" data-filter="*">All</li>
-        <li data-filter=".burger">Burger</li>
-        <li data-filter=".pizza">Pizza</li>
-        <li data-filter=".pasta">Pasta</li>
-        <li data-filter=".fries">Fries</li>
+        <li data-filter=".burger">Mac</li>
+        <li data-filter=".pizza">iPad</li>
+        <li data-filter=".pasta">iPhone</li>
+        <li data-filter=".fries">Watch</li>
       </ul>
 
       <div class="filters-content">
