장바구니, 마이페이지 완성

--- a/src/main/resources/templates/Item/item_detail.html
+++ b/src/main/resources/templates/Item/item_detail.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<header>
-    <h1>상품 페이지</h1>
-</header>
+<div th:replace="fragments/header :: headerFragment"></div>
+<div th:include="fragments/nav.html"></div>
 <main class="product-page">
     <div class="container">
         <div class="row">
@@ -36,6 +35,8 @@
         </div>
     </div>
 </main>
+<div th:replace="fragments/footer :: footerFragment"></div>
+
 <script src="script.js"></script>
 <!-- Bootstrap JS 추가 -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
