--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="index.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu.html">Menu</a>
+                <a class="nav-link" href="Item/apple_item.html">Menu</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
