--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,10 +17,10 @@
                         <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="item">Apple</a>
+                        <a class="nav-link" href="a_item">Apple</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="item">Samsung</a>
+                        <a class="nav-link" href="s_item">Samsung</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="book">1:1 문의</a>
