--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -42,7 +42,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="main.html">
             <span>
               Feane
             </span>
@@ -55,7 +55,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="main.html">Home </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Item/apple_item.html">Menu</a>
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
+                <a class="nav-link" href="ask.html">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
