--- a/src/main/resources/templates/Item/apple_item.html
+++ b/src/main/resources/templates/Item/apple_item.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Product
+          Apple
         </h2>
       </div>
 
