img 추가, 데이터 뿌리기 작업중

--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -20,20 +20,20 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Apple
+          Item
         </h2>
       </div>
 
       <ul class="filters_menu">
-        <li class="active" data-filter="*">All</li>
-        <li data-filter=".Mac">Mac</li>
-        <li data-filter=".iPad">iPad</li>
-        <li data-filter=".iPhone">iPhone</li>
+        <li class="active" data-filter="*">모두</li>
+        <li data-filter=".laptop">노트북</li>
+        <li data-filter=".tablet">태블릿</li>
+        <li data-filter=".phone">스마트폰</li>
       </ul>
 
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all Mac">
+          <div class="col-sm-6 col-lg-4 all laptop">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -60,7 +60,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all iPad">
+          <div class="col-sm-6 col-lg-4 all tablet">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -87,7 +87,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all iPhone">
+          <div class="col-sm-6 col-lg-4 all phone">
             <div class="box">
               <div>
                 <div class="img-box">
