--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -14,13 +14,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  mx-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="home">홈 <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="a_item">Apple</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="s_item">Samsung</a>
+                        <a class="nav-link" href="item">상품</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="book">1:1 문의</a>
