login 페이지 추가

--- a/src/main/resources/templates/X/about.html
+++ b/src/main/resources/templates/X/about.html
@@ -42,7 +42,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="main.html">
+          <a class="navbar-brand" href="../main.html">
             <span>
               Feane
             </span>
@@ -55,16 +55,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item ">
-                <a class="nav-link" href="main.html">Home </a>
+                <a class="nav-link" href="../main.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Item/item.html">Menu</a>
+                <a class="nav-link" href="../Item/item.html">Menu</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ask.html">Book Table</a>
+                <a class="nav-link" href="../ask.html">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
@@ -247,12 +247,6 @@
         </div>
       </div>
       <div class="footer-info">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-        </p>
       </div>
     </div>
   </footer>
