--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="Eitem">귀걸이</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="book">1:1 문의</a>
+                        <a class="nav-link" href="ask">1:1 문의</a>
                     </li>
                 </ul>
                 <div class="user_option">
