--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -23,19 +23,18 @@
         </div>
       </div>
       <div class="col_half last">
-        <form>
+        <form action="login" method="post">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+          <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
           <div class="input_field"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>
-            <input type="email" name="email" placeholder="Email" required=""/>
+            <input type="email" id="email" name="email" placeholder="Email" required />
           </div>
           <div class="input_field"><span><i class="fa fa-lock" aria-hidden="true"></i></span>
-            <input type="password" name="phone" placeholder="Password" required=""/>
+            <input type="password" id="pwd" name="pwd" placeholder="Password" required />
           </div>
-          <input class="button" type="submit" value="Sign in"/>
+          <input class="button" type="submit" value="로그인"/>
           <div class="row clearfix bottom_row">
-            <div class="col_half remember_me">
-              <input name="" type="checkbox" value=""/>              Remember me
-            </div>
-            <div class="col_half forgot_pw"><a href="#">Forgot Password?</a></div>
+<!--            <div class="col_half forgot_pw"><a href="#">Forgot Password?</a></div>-->
           </div>
         </form>
       </div>
