--- a/src/main/resources/templates/file.html
+++ b/src/main/resources/templates/file.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <form method="post" enctype="multipart/form-data" action="/img">
-    <input type="file" name="pic">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+      <input type="file" name="pic">
     <button>사진 전송</button>
   </form>
 </body>
