--- a/src/main/resources/templates/itemAdd.html
+++ b/src/main/resources/templates/itemAdd.html
@@ -13,28 +13,43 @@
     <h1>상품 등록</h1>
   </div>
 <div class="container">
-  <form action="itemAdd" method="post" enctype="multipart/form-data">
+  <form action="itemAdd" method="post" th:object="${item}" enctype="multipart/form-data">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <div class="form-group">
       <label for="name">상품명</label>
-      <input type="text" id="name" name="name" required />
+      <input type="text" th:field="*{name}" id="name" name="name" required />
     </div>
     <div class="form-group">
       <label for="detail">상품 설명</label>
-      <textarea id="detail" name="detail" required=""></textarea>
+      <textarea id="detail" th:field="*{detail}" name="detail" required=""></textarea>
     </div>
     <div class="form-group">
       <label for="color">소재</label>
-      <select id="color" name="color" required></select><br><br>
+        <select id="color" name="color" th:field="*{color}" required>
+          <option value="">소재 선택</option>
+          <option th:each="itemColor : ${T(com.shopping.hee.domain.ItemColor).values()}"
+                  th:value="${itemColor}"
+                  th:text="${itemColor.name}">
+          </option>
+        </select>
+      <label for="color">소재</label>
+      <select id="category" name="category" th:field="*{category}" required>
+        <option value="">소재 선택</option>
+        <option th:each="category : ${T(com.shopping.hee.domain.Category).values()}"
+                th:value="${category}"
+                th:text="${category.name}">
+        </option>
+      </select><br><br>
     </div>
     <div class="form-group mine">
       <label for="price">상품 가격</label>
-      <input class="gap" type="number" id="price" name="price" required />
+      <input class="gap" th:field="*{price}" type="number" id="price" name="price" required />
 
       <label for="count">재고</label>
-      <input class="gap" type="number" id="count" name="count" required />
+      <input class="gap" th:field="*{count}" type="number" id="count" name="count" required />
 
       <label for="size">사이즈</label>
-      <input type="number" id="size" name="size" required />cm
+      <input type="number" th:field="*{size}" id="size" name="size" required />cm
     </div><br>
     <div class="form-group">
       <label for="img">상품 이미지</label>
@@ -67,5 +82,14 @@
 <!-- custom js -->
 <script src="js/custom.js"></script>
 <script src="js/board.js"></script>
+<script th:inline="javascript">
+
+  $(document).ready(function(){
+    var errorMessage = [[${errorMessage}]];
+    if(errorMessage != null){
+      alert(errorMessage);
+    }
+  });
+</script>
 </body>
 </html>
