상품 등록 페이지 css 수정

--- a/src/main/resources/static/css/ItemAdd.css
+++ b/src/main/resources/static/css/ItemAdd.css
@@ -26,6 +26,10 @@ body {
     border-radius: 5px;
 }
 
+.form-group select {
+    height: 60%;
+}
+
 .form-group input[type="number"]{
     width: 25%;
     padding: 10px;
