--- a/src/main/resources/templates/itemAdd.html
+++ b/src/main/resources/templates/itemAdd.html
@@ -23,24 +23,30 @@
       <label for="detail">상품 설명</label>
       <textarea id="detail" th:field="*{detail}" name="detail" required=""></textarea>
     </div>
-    <div class="form-group">
-      <label for="color">소재</label>
-        <select id="color" name="color" th:field="*{color}" required>
+    <div class="form-row">
+      <div class="form-group col-6">
+        <label for="category">카테고리</label>
+        <select id="category" name="category" th:field="*{category}" class="form-control" required>
+          <option value="">카테고리 선택</option>
+          <option th:each="category : ${T(com.shopping.hee.domain.Category).values()}"
+                  th:value="${category}"
+                  th:text="${category.name}">
+          </option>
+        </select>
+      </div>
+
+      <div class="form-group col-6">
+        <label for="color">소재</label>
+        <select id="color" name="color" th:field="*{color}" class="form-control" required>
           <option value="">소재 선택</option>
           <option th:each="itemColor : ${T(com.shopping.hee.domain.ItemColor).values()}"
                   th:value="${itemColor}"
                   th:text="${itemColor.name}">
           </option>
         </select>
-      <label for="color">소재</label>
-      <select id="category" name="category" th:field="*{category}" required>
-        <option value="">소재 선택</option>
-        <option th:each="category : ${T(com.shopping.hee.domain.Category).values()}"
-                th:value="${category}"
-                th:text="${category.name}">
-        </option>
-      </select><br><br>
+      </div>
     </div>
+
     <div class="form-group mine">
       <label for="price">상품 가격</label>
       <input class="gap" th:field="*{price}" type="number" id="price" name="price" required />
@@ -77,8 +83,6 @@
 </script>
 <!-- isotope js -->
 <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
-<!-- nice select -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
 <script src="js/board.js"></script>
