상품 카테고리 별 보여주기

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -20,6 +20,9 @@
                         <a class="nav-link" href="Bitem">팔찌</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="itemAdd">등록</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="Ritem">반지</a>
                     </li>
                     <li class="nav-item">
