--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head></head>
+<head>
+
+</head>
 
 <body class="sub_page">
 <div th:replace="fragments/header :: headerFragment"></div>
@@ -48,22 +50,12 @@
                   <div class="options">
                     <h6 th:text="${#numbers.formatInteger(item.price, 0, 'COMMA') + ' 원'}">
                     </h6>
-                    <a href="#">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart4 nav_btn" viewBox="0 0 16 16">
-                        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                      </svg>
-                    </a>
                   </div>
-                  </div>
+                </div>
                 </div>
               </div>
             </div>
         </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          View More
-        </a>
       </div>
     </div>
   </section>
